train/ml2023-r1-dataset/47/47a682cdf10dff98bcee-OTHER.txt
File "<stdin>", line 1 
 cd C: \ 
 ^ 
SyntaxError: invalid syntax